tests/NormalTests/paczka1/fuzzy1/75110972.err
Error in line 9: A761 A367 63,7
Error in line 20: OSZOivTWV8 A367 52,5
Error in line 26: rHqk9SM A367 95,1
Error in line 25: OSZOivTWV8 A761 96,2
Error in line 36: glzfpxDEZcG A938 60,3
Error in line 23: KHw4UU A761 44,0
